# gvariant-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/ostree-ls/: Cargo.toml
examples/ostree-ls/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
gvariant/: Cargo.toml
gvariant-macro/: Cargo.toml
gvariant-macro/src/: generate_impl.rs  lib.rs  type_parser.rs
gvariant/src/: aligned_bytes.rs  buf.rs  casting.rs  lib.rs  offset.rs
gvariant/tests/: test.rs
src/: aligned_bytes.rs  casting.rs  lib.rs  offset.rs
tests/: test.rs
