[package]
name = "gvariant-tests"
version = "0.1.0"
authors = ["William Manley <will@stb-tester.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gvariant-macro = {path = "gvariant-macro"}
gvariant = {path = "gvariant"}
ref-cast = "1.0"