
[package]
name = "gvariant-tests-fuzz"
version = "0.0.0"
authors = ["William Manley <will@williammanley.net>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.3"
glib-sys = "0.9"
gvariant = {path = "../gvariant"}

[dependencies.gvariant-tests]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
