[package]
name = "gvariant-macro"
version = "0.2.0"
authors = ["William Manley <will@stb-tester.com>"]
edition = "2018"
description = "Proc macros for the gvariant crate"
repository = "https://github.com/wmanley/gvariant-rs/"
homepage = "https://github.com/wmanley/gvariant-rs/"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
