[package]
name = "gvariant"
version = "0.1.0"
authors = ["William Manley <will@stb-tester.com>"]
edition = "2018"
description = "A pure-rust implementation of the GVariant serialisation format"
readme = "../README.md"
repository = "https://github.com/wmanley/gvariant-rs/"
homepage = "https://github.com/wmanley/gvariant-rs/"
license = "MIT OR Apache-2.0"
keywords = ["gvariant", "glib", "deserialization"]
categories = ["encoding", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ref-cast = "1.0"
gvariant-macro = {path = "../gvariant-macro", version = "0.1.0"}
